--- a/Resources/CustomTheme.plist
+++ b/Resources/CustomTheme.plist
@@ -23,14 +23,14 @@
 		<key>minHeight</key>
 		<integer>48</integer>
 		<key>textAppearance</key>
-        <string>TextAppearance.Body.Bold</string>
+		<string>TextAppearance.Body.Bold</string>
 	</dict>
 	<key>TextAppearance.Body.Bold</key>
 	<dict>
 		<key>fontStyleName</key>
 		<string>UICTFontTextStyleBody</string>
 		<key>fontSymbolicTrait</key>
-		<string>traitMonoSpace</string>
+		<string>traitBold</string>
 		<key>textAlignment</key>
 		<string>right</string>
 	</dict>
@@ -39,7 +39,7 @@
 		<key>textColorName</key>
 		<string>Secondary</string>
 		<key>textAppearance</key>
-        <string>TextAppearance.Link</string>
+		<string>TextAppearance.Link</string>
 	</dict>
 	<key>TextAppearance.Link</key>
 	<dict>
